# bench2

./: .gitignore  Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  apic.rs  bench_acpi.rs  debug_log.rs  gdt.rs  gop_buffer.rs  interrupts.rs  lib.rs  main.rs  memory.rs  tty.rs  virtual_addresses.rs
kernel/src/device_manager/: apic.rs  bench_acpi.rs  interrupts.rs  mod.rs
kernel/src/io/: framebuffer.rs  interrupts.rs  keyboard.rs  mod.rs
kernel/src/io/drivers/: display.rs  mod.rs
kernel/src/io/drivers/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/io/drivers/display/: gop_buffer.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  heap_allocator.rs  mapper.rs  mod.rs
src/: main.rs
