[package]
name = "bench2"
version = "0.1.0"
edition = "2021"
default-run = "qemu-uefi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[workspace]
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.5"