[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.4"
noto-sans-mono-bitmap = "0.2.0"
x86_64 = "0.14.11"
log = "0.4.20"
spin = "0.5.2"
acpi = "5.0.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"